# ClayCPPTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
MMZ4Parts/: CMakeLists.txt
MMZ4Parts/Clay/: clay_renderer_raylib.cpp
cmake/: FindSDL2.cmake
ext/: CMakeLists.txt
root/: CMakeLists.txt  main.cpp
root/scripts/: createCPP.bat  createHeader.bat  refreshSolution.bat
root/src/: FWCore.cpp  FWCore.h  main.cpp
root/utils/: profiler.h
